WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57301
close before open WebSocket doesn't fire close event
https://bugs.webkit.org/show_bug.cgi?id=57301
Summary
close before open WebSocket doesn't fire close event
Fumitoshi Ukai
Reported
2011-03-28 23:18:33 PDT
If it opens WebSocket and close in the same context (before receiving open event), it misses firing close event. var ws = new WebSocket(wsUrl); ws.onclose = function() { alert("closed"); } ws.close();
Attachments
Patch
(4.32 KB, patch)
2011-03-28 23:41 PDT
,
Fumitoshi Ukai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2011-03-28 23:41:56 PDT
Created
attachment 87269
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-05-23 14:57:19 PDT
ap, abarth? It's been a month, this one looks like an easy review.
Adam Barth
Comment 3
2011-05-23 14:59:43 PDT
Comment on
attachment 87269
[details]
Patch Ok.
Alexey Proskuryakov
Comment 4
2011-05-23 15:09:26 PDT
Sorry, overlooked it. Looks good to me, too - thanks for fixing this!
Fumitoshi Ukai
Comment 5
2011-05-24 01:11:11 PDT
Comment on
attachment 87269
[details]
Patch Clearing flags on attachment: 87269 Committed
r87135
: <
http://trac.webkit.org/changeset/87135
>
Fumitoshi Ukai
Comment 6
2011-05-24 01:11:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug