2011-05-24  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Adam Barth.

        close before open WebSocket doesn't fire close event.
        https://bugs.webkit.org/show_bug.cgi?id=57301

        * http/tests/websocket/tests/close-before-open-expected.txt: Added.
        * http/tests/websocket/tests/close-before-open.html: Added.
2011-05-24  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Adam Barth.

        close before open WebSocket doesn't fire close event.
        https://bugs.webkit.org/show_bug.cgi?id=57301

        In platformClose(), m_readStream may be 0 until proxy is resolved.
        It should callback didClose() in such case.

        Test: http/tests/websocket/tests/close-before-open.html

        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::platformClose):

Canonical link: https://commits.webkit.org/76715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87135 268f45cc-cd09-0410-ab3c-d52691b4dbfc